--- a/src/assets/css/sal_e_luz/sal_e_luz.css
+++ b/src/assets/css/sal_e_luz/sal_e_luz.css
@@ -295,7 +295,7 @@ body section#shop .shop .options_shop
 
 body section#shop .shop .options_shop label i
 {
-    font-size: 25px
+    font-size: 25px;
 }
 
 
