--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -6,6 +6,7 @@
                 <h1>SAL</h1>
                 <h1>&</h1>
                 <h1>LUZ</h1>
+                <h1>2023</h1>
             </div>
             <div class="image_evento">
 
@@ -70,6 +71,22 @@
 
         </div>
         
+        <div class="comprar">
+            <div class="titulo_compra">
+                <h1>ADQUIRA</h1>
+                <h1>JÁ A SUA!</h1>
+            </div>
+            <div class="detalhes_compra">
+                <p>Tamanhos/Preços/Formas de pagamento </p>
+            </div>
+            <div class="link_form">
+                <a target="_blank" href="https://docs.google.com/forms/d/1l4J_Al1huE4JS7H9f26OiLDei9ZSTl3KRdQ_BL3zMH4/viewform?edit_requested=true">CLique aqui</a>
+            </div>
+            <div class="form_data">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmYc95MJiEqwbvRCAMPF-jIZPmEIfJ6ir58jw6fd60dVnUdQ/viewform?embedded=true" width="320" height="862" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+            </div>
+        </div>
+
     </div>
 
     <div class="background_2023" />
