--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -79,11 +79,62 @@
             <div class="detalhes_compra">
                 <p>Tamanhos/Preços/Formas de pagamento </p>
             </div>
-            <div class="link_form">
+            {{!-- <div class="link_form">
                 <a target="_blank" href="https://docs.google.com/forms/d/1l4J_Al1huE4JS7H9f26OiLDei9ZSTl3KRdQ_BL3zMH4/viewform?edit_requested=true">CLique aqui</a>
-            </div>
-            <div class="form_data">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmYc95MJiEqwbvRCAMPF-jIZPmEIfJ6ir58jw6fd60dVnUdQ/viewform?embedded=true" width="320" height="862" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+            </div> --}}
+
+            <form action="/sendform" method="post">
+                <div class="cpf active-form">
+                    <label for="cpf"> CPF/CNPJ
+                        <input type="text" id="cpf" name="cpf" value="07760290373">
+                    </label>
+                </div>
+
+                <div class="telefone">
+                    <label for="telefone"> Telefone
+                        <input type="tel" id="telefone" name="contato" value="85989285385">
+                    </label>
+                </div>
+
+                <div class="nome">
+                    <label for="nome"> Nome
+                        <input type="text" id="nome" name="nome" value="lucas">
+                    </label>
+                </div>
+                <div class="produto">
+                    <label for="">
+                        <input type="hidden" name="idProduto" id="idProduto" value="1">
+                    </label>
+                    <label for="quantidade"> Quantidade
+                        <input type="number" id="quantidade" name="qtd" value="22">
+                    </label>
+
+                    <label for="tamanho"> Tamanhos
+                        <select id="tamanhos" name="tamanho">
+                            <option value="pp">PP</option>
+                            <option value="p">P</option>
+                            <option value="g">G</option>
+                            <option value="gg">GG</option>
+                        </select>
+                    </label>
+                </div>
+                <div class="pagamentos">
+                    <label for="fpag"> Pagamento
+                        <select name="fpag" id="fpag">
+                            <option value="pix">Pix</option>
+                            <option value="dinheiro">Dinheiro</option>
+                            <option value="cartao">Cartão</option>
+                            <option value="outros">Outros</option>
+                        </select>
+                    </label>
+                </div>
+                <div class="submit">
+                    <input type="submit" value="Reservar">
+                </div>
+            </form>
+            <div class="shop_next">
+                <button id="left">Voltar</button>
+                <button id="right">Próximo</button>
             </div>
         </div>
 
