--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -142,3 +142,24 @@
 
     <div class="background_2023" />
 </section>
+
+<section id="more">
+    <div class="more">
+        <div class="event_image">
+            <img src="img/SAL_E_LUZ/Icons/coroa.svg" alt="coroa">
+            <p class="p_01">O PRINCÍPIO E O FIM</p>
+            <div class="image-content">
+                <div class="image">
+                    <img src="img/SAL_E_LUZ/Icons/lion.svg" alt="event_image">
+                </div>
+                <h1>ELE VEM</h1>
+            </div>
+            <p class="p_02">O PRIMEIRO E O ÚLTIMO</p>
+            <p class="p_03">EU SOU O ALFA E O ÔMEGA</p>
+            <span>Apocalipse: 22: 12 - 13</span>
+        </div>
+    </div>
+    <div class="background_2023_01">
+
+    </div>
+</section>
