--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -159,7 +159,70 @@
             <span>Apocalipse: 22: 12 - 13</span>
         </div>
     </div>
-    <div class="background_2023_01">
+</section>
 
+<section id="programacao">
+    <div class="programacao">
+        <div class="programacao-title">
+            <h1>PROGRAMAÇÃO</h1>
+        </div>
+        <div class="programacao-conteudo">
+            <div class="programacao-itens">
+                <div class="programacao-item">
+                    <span>1° dia</span>
+                    <div class="programacao-detalhes">
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Culto Abertura</span>
+                        </div>
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Louvores</span>
+                        </div>
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Pregação</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="programacao-item">
+                    <span>2° dia</span>
+                    <div class="programacao-detalhes">
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Continuação</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="programacao-item">
+                    <span>3° dia</span>
+                    <div class="programacao-detalhes">
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Consagração</span>
+                        </div>
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Coffe Break</span>
+                        </div>
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Palestra</span>
+                        </div>
+                        <div class="item">
+                            <i class="ph ph-arrow-bend-down-right"></i>
+                            <span>Culto de encerramento</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="programacao-imagens">
+                <img src="img/SAL_E_LUZ/Fotos/01.png" alt="Foto evento">
+                <img src="img/SAL_E_LUZ/Fotos/2.webp" alt="Foto evento">
+
+                <div class="background_2023"></div>
+            </div>
+        </div>
     </div>
+    
 </section>
