--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -219,10 +219,37 @@
             <div class="programacao-imagens">
                 <img src="img/SAL_E_LUZ/Fotos/01.png" alt="Foto evento">
                 <img src="img/SAL_E_LUZ/Fotos/2.webp" alt="Foto evento">
+                <span>VOCÊ NÃO PODE FICAR DE FORA!</span>
+                <span>VENHA SE ALEGRAR CONOSCO!</span>
 
                 <div class="background_2023"></div>
             </div>
         </div>
     </div>
     
+</section>
+
+<section id="oferta">
+    <div class="oferta">
+        <div class="titulo-oferta">
+            <div class="titulo">
+                <h1>O</h1>
+                <h1>FER</h1>
+                <h1>TA</h1>
+            </div>
+            <span>voluntária</span>
+        </div>
+        <div class="qrcode">
+            <div class="qrcode-img">
+               <img src="img/BACKGROUND/qrcode.png" alt="qrcode">
+            </div>
+            <div class="chave">
+                <h1>CHAVE PIX</h1>
+                <span>saleluzadbj@gmail.com</span>
+            </div>
+            <div class="images">
+                <img src="img/SAL_E_LUZ/Effect/coins.webp" alt="coins">
+            </div>
+        </div>
+    </div>
 </section>
