--- a/views/saleluz_new.handlebars
+++ b/views/saleluz_new.handlebars
@@ -78,6 +78,7 @@
             </div>
             <div class="detalhes_compra">
                 <p>Tamanhos/Preços/Formas de pagamento </p>
+                <p>35,00 R$</p>
             </div>
             {{!-- <div class="link_form">
                 <a target="_blank" href="https://docs.google.com/forms/d/1l4J_Al1huE4JS7H9f26OiLDei9ZSTl3KRdQ_BL3zMH4/viewform?edit_requested=true">CLique aqui</a>
@@ -86,19 +87,19 @@
             <form action="/sendform" method="post">
                 <div class="cpf active-form">
                     <label for="cpf"> CPF/CNPJ
-                        <input type="text" id="cpf" name="cpf" value="07760290373">
+                        <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00">
                     </label>
                 </div>
 
                 <div class="telefone">
                     <label for="telefone"> Telefone
-                        <input type="tel" id="telefone" name="contato" value="85989285385">
+                        <input type="tel" id="telefone" name="contato" placeholder="00 00000-0000">
                     </label>
                 </div>
 
                 <div class="nome">
                     <label for="nome"> Nome
-                        <input type="text" id="nome" name="nome" value="lucas">
+                        <input type="text" id="nome" name="nome" placeholder="digite">
                     </label>
                 </div>
                 <div class="produto">
@@ -106,7 +107,7 @@
                         <input type="hidden" name="idProduto" id="idProduto" value="1">
                     </label>
                     <label for="quantidade"> Quantidade
-                        <input type="number" id="quantidade" name="qtd" value="22">
+                        <input type="number" id="quantidade" name="qtd" value="1">
                     </label>
 
                     <label for="tamanho"> Tamanhos
@@ -248,8 +249,21 @@
                 <span>saleluzadbj@gmail.com</span>
             </div>
             <div class="images">
-                <img src="img/SAL_E_LUZ/Effect/coins.webp" alt="coins">
+                {{!-- <img src="img/SAL_E_LUZ/Effect/coins.webp" alt="coins"> --}}
             </div>
+        </div>
+    </div>
+</section>
+
+<section id="mais-info">
+    <div class="mais-info">
+        <div class="title-info">
+            <h1>PARA SABER</h1>
+            <h1><i class="ph ph-plus"></i> INFORMAÇÕES</h1>
+            <a href="">Clique aqui</a>
+        </div>
+        <div class="background_fotos">
+            <img src="img/SAL_E_LUZ/Fotos/3.webp" alt="Conjunto chama viva">
         </div>
     </div>
 </section>
